deployment/minikube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: photon-service
  namespace: phoenix
spec:
  selector:
    app: photon
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9876
