deployment/minikube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photon-ingress
  namespace: phoenix
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ /(internal|debug) {
        return 404;
      }
spec:
  rules:
  - host: local-webhooks.lambdatest.io
    http:
      paths:
      - pathType: Prefix
        path: "/health"
        backend:
          service:
            name: photon-service
            port:
              number: 80
      - pathType: Prefix
        path: "/hook"
        backend:
          service:
            name: photon-service
            port: 
              number: 80
